Fixed issue with map/sat button being covered

--- a/dbikes/flaskapp/static/styles.css
+++ b/dbikes/flaskapp/static/styles.css
@@ -19,7 +19,7 @@
 
 #predTable{
     position: absolute;
-    top:0%;
+    top:10%;
     width: 20%;
     height: 30%;
     right:1%;
@@ -34,10 +34,10 @@
 #stationsTable{
     /* position absolute allows the table to show up infront of the map */
     position:absolute;
-    top:0%;
+    top:10%;
     background-color: rgba(255,255,255,.9);
     width: 20%;
-    height: 100%;
+    height: 80%;
     left: 1%;
     /* sets the font size to be relative to the container size/ prevents overflow */
     font-size: 3 vw 3vh;
